--- a/resume/templates/resume/index.html
+++ b/resume/templates/resume/index.html
@@ -36,10 +36,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">{{user_detail.first_name}} {{user_detail.last_name}}</a></h1>
+      <h1><a href="index.html">{{user_detail.first_name|default:"Susan"}} {{user_detail.last_name|default:"Sujakhu"}}</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>{{ user_detail.profile.position }}</span> from {{ user_detail.profile.address }}</h2>
+      <h2>I'm a passionate <span>{{ user_detail.profile.position|default:"Computer Engineer" }}</span> from {{ user_detail.profile.address|default:"Nepal" }}</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -87,24 +87,24 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{user_detail.profile.dob}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="{{user_detail.profile.website}}">{{user_detail.profile.website}}</a></span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:{{user_detail.profile.phone}}">{{user_detail.profile.phone}}</a></span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{user_detail.profile.address}}</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{user_detail.profile.dob|default:"Oct. 22, 1996"}}</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="{{user_detail.profile.website}}">{{user_detail.profile.website|default:"susansujakhu.com.np"}}</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:{{user_detail.profile.phone}}">{{user_detail.profile.phone|default:"+977-9866297369"}}</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{user_detail.profile.address|default:"Bhaktapur Nepal"}}</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               {% now "Y" as current_year %}
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>{{ user_detail.profile.phone }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span> <a href="mailto:{{user_detail.email}}"> {{user_detail.email}}</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>{{ user_detail.profile.phone|default:"+977-9866297369"}} }}</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span> <a href="mailto:{{user_detail.email}}"> {{user_detail.email|default:"sushansujakhu14@gmail.com"}}</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>linkedIn:</strong> <span><a href="{{ user_detail.profile.linkedin }}">susan.sujakhu</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
           <p>
-            {{user_detail.profile.bio}}
+            {{user_detail.profile.bio|default:"Short Bio Aboout Yourself goes here"}}
           </p>
         </div>
       </div>
